--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <header class="container text-center">
-        <img src="gun.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Ronaldo_</p>
-        <h1>Eu ensino Programação</h1>
+        <p class="lead">Eu sou Karina_</p>
+        <h1>Eu estudo programação</h1>
         <p>Sou </p>
         <p>Minhas habilidades</p>
         <div>
@@ -33,7 +33,7 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                        <h5 class="card-title">Site do sharkboy e lavagirl</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
                             favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
                             na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
