--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Site do sharkboy e lavagirl</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros
-                            favoritos, incluindo informações sobre os autores, datas de publicação e links para compra
-                            na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes
+                        <p class="card-text">Este projeto é uma página web que apresenta os novos lançamentos, uma lista dos mais esquisitos com favoritos, 
+                            topicos visitados recentemente, incluindo nome dos produtores do site, novidades como poder, personagens e visualizações.
+                             A página é estilizada com CSS para uma visualização agradável e usa fontes
                             externas do Google Fonts.
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
