--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 
 <body>
     <header class="container text-center">
-        <img src="" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
+        <img src="gun.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
-        <p class="lead">Eu sou Karina_</p>
-        <h1>Eu estudo programação</h1>
-        <p>Sou </p>
+        <p class="lead">Eu sou Gun Atthaphan_</p>
+        <h1>Eu estudo artes visuais</h1>
+        <p>Sou ator</p>
         <p>Minhas habilidades</p>
         <div>
-            <p class="badge bg-secondary">HTML</p>
-            <p class="badge bg-secondary">CSS</p>
-            <p class="badge bg-secondary">JavaScript</p>
-            <p class="badge bg-secondary">Scratch</p>
+            <p class="badge bg-secondary">atuação</p>
+            <p class="badge bg-secondary">chorar facilmente</p>
+            <p class="badge bg-secondary">sofrer</p>
+            <p class="badge bg-secondary">ser gay</p>
         </div>
     </header>
     <main class="container mt-5">
@@ -33,7 +33,7 @@
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Site do sharkboy e lavagirl</h5>
+                        <h5 class="card-title">Teory of love</h5>
                         <p class="card-text">Este projeto é uma página web que apresenta os novos lançamentos, uma lista dos mais esquisitos com favoritos, 
                             topicos visitados recentemente, incluindo nome dos produtores do site, novidades como poder, personagens e visualizações.
                              A página é estilizada com CSS para uma visualização agradável e usa fontes
