--- a/index.html
+++ b/index.html
@@ -31,13 +31,10 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="T.O.L.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Teory of love</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta os novos lançamentos, uma lista dos mais esquisitos com favoritos, 
-                            topicos visitados recentemente, incluindo nome dos produtores do site, novidades como poder, personagens e visualizações.
-                             A página é estilizada com CSS para uma visualização agradável e usa fontes
-                            externas do Google Fonts.
+                        <h5 class="card-title">Theory of Love</h5>
+                        <p class="card-text">Esta é uma série de romance cheio de drama e complicações na vida de Third que é apaixonado pelo melhor amigo khai
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -85,29 +82,28 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Theory of Love</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de
-                        livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar
-                        seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano
-                        de publicação e uma opção de compra.</p>
-                    <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo,
-                        enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a
-                        disposição dos elementos.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma
-                        fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos.
-                        O uso de HTML e CSS é importante pois assim é possível criar um site acessível e
-                        esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na
-                        experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para
-                        a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
+                    <p>Third (Gun Atthaphan Phunsawat), junto com seus três melhores amigos Two (White Nawat Phumphotingam), 
+                        Bone (Mike Chinnarat Siriphongchawalit) e Khai (Off Jumpol Adulkittiporn), são estudantes de filmologia
+                         na universidade local. Trabalhando duro para realizarem seus sonhos, os quatro melhores amigos estão 
+                         sempre presentes um para o outro, mas Third tem um segredo que pode destruir tudo o que eles trabalharam
+                          tanto para alcançar.</p>
+                    <p>Tendo nutrido uma paixão por Khai durante anos, Third tem trabalhado arduamente para manter em segredo seus
+                         verdadeiros sentimentos por seu amigo. Depois de anos vendo Khai cortejar uma série interminável de garotas,
+                          Third está perfeitamente ciente de que não tem nenhuma chance com seu amigo. Mas não foi apenas o romance 
+                          constante de Khai que frustrou todas as esperanças de Third. Com Khai aderindo a uma política estrita de
+                           “não namorar amigos”, Third está dolorosamente ciente do fato de que seus sentimentos seriam rejeitados, 
+                           mesmo que Khai estivesse de alguma forma interessado. Mesmo assim, Third não consegue deixar de nutrir 
+                           cada vez mais sentimentos por Khai.</p>
+                    <p>Com seu amor não correspondido afetando-o a cada dia, Third finalmente decide que chegou a hora de esquecer
+                         Khai e seguir em frente. Obviamente, só depois que Third seguiu em frente é que Khai começou a perceber
+                          que seus sentimentos por seu amigo podem não ser estritamente platônicos. Khai perdeu a chance de ter um 
+                          amor verdadeiro ou encontrará uma forma de conquistar o coração de seu melhor amigo?</p>
+                    <p>Adaptado do romance homônimo de JittiRain, “Teoria do Amor” é um drama romântico tailandês de 2019 dirigido 
+                        por X Nuttapong Mongkolsawas. </p>
                     <img src="img/projeto-1.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
