--- a/index.html
+++ b/index.html
@@ -34,7 +34,10 @@
                     <img src="T.O.L.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Theory of Love</h5>
-                        <p class="card-text">Esta é uma série de romance cheio de drama e complicações na vida de Third que é apaixonado pelo melhor amigo khai
+                        <p class="card-text">Esta é uma série de romance cheio de drama e complicações na vida
+                             de Third que é apaixonado pelo melhor amigo khai
+                             data de lançamento: 1 de junho
+                             ano:2019
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
@@ -46,12 +49,12 @@
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência
-                            Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o
-                            impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as
-                            pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o
-                            futuro da IA.</p>
+                        <h5 class="card-title">Not Me</h5>
+                        <p class="card-text">Esta série com vários gêneros como ação, thriller, mistério e romance, 
+                            a série aborda sobre assuntos como política, a luta pelos direitos, violência, igualdade 
+                            social, justiça, comunidade LGBTQ+ 
+                            data de lançamento: 12 de dezembro
+                            ano:2021</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
@@ -119,36 +122,26 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Not Me</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que
-                        simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é
-                        engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis
-                        consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.
-                    </p>
-                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de
-                        perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS
-                        é utilizado para estilizar a página, empregando um esquema de cores futurista e layout
-                        responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar
-                        interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as
-                        escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e
-                        respostas.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão
-                        principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção
-                        flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma
-                        imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo
-                        uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de
-                        tela.</p>
-                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as
-                        lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas
-                        dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a
-                        expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside
-                        na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores
-                        sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da
-                        tecnologia em nossas vidas.
-                    </p>
+                    <p>Os gêmeos idênticos Black (Gun) e White (também Gun) compartilham um vínculo emocional tão 
+                        forte que sentem a dor um do outro. Para diminuir o vínculo, seus pais os separam um do outro
+                        no início da adolescência. Depois de se formar na universidade no exterior, White retorna a 
+                        Bangkok para seguir os passos do pai, preparando-se para se tornar um diplomata. No entanto,
+                        logo após sua chegada à Tailândia, o vínculo com seu gêmeo se faz conhecido mais uma vez,
+                        pois White sofre uma dor excruciante quando Black é espancado até o coma. Para descobrir
+                        quem machucou seu irmão, White assume sua identidade e se infiltra na gangue de Black, 
+                        composta por ativistas políticos - um grupo de estudantes universitários que se tornaram 
+                        vigilantes, que arriscam suas vidas por uma sociedade tailandesa mais justa.
+                    </p
+                    <p>Cada vez mais, White se vê questionando sua própria cumplicidade na dinâmica conservadora e 
+                        injusta que o cerca. Ao longo do caminho, seu companheiro de equipe e rival de Black, Sean 
+                        (Off) passa de suspeitar da empatia e sensatez repentinas de "Black " a se apaixonar por 
+                        essa nova versão dele. Com a prisão e a morte como uma ameaça constante às suas vidas, 
+                        White se vê desencadeando uma revolta generalizada contra a ganância capitalista, a corrupção
+                        e as violações dos direitos civis.</p>
                     <img src="img/projeto-2.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
