--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                     <div class="card-body">
                         <h5 class="card-title">Theory of Love</h5>
                         <p class="card-text">Esta é uma série de romance cheio de drama e complicações na vida
-                             de Third que é apaixonado pelo melhor amigo khai
-                             data de lançamento: 1 de junho
-                             ano:2019
+                             de Third que é apaixonado pelo melhor amigo khai<p>
+                             data de lançamento: 1 de junho</p>
+                             ano:2019</p>
                         </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
                             o projeto</button>
