--- a/index.html
+++ b/index.html
@@ -66,12 +66,10 @@
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch
-                        </h5>
-                        <p class="card-text">EEste projeto Scratch cria uma experiência interativa educativa sobre
-                            astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a
-                            forma da Terra através de cenários dinâmicos e diálogos informativos.
-                        </p>
+                        <h5 class="card-title">Cooking Crush</h5>
+                        <p class="card-text">Esta série com gênero de romance, comédia e comida, a série fala sobre</p>
+                        data de lançamento: 26 de novembro</p>
+                        ano:2023</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
                             o projeto</button>
                     </div>
