--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Cooking Crush</h5>
-                        <p class="card-text">Esta série com gênero de romance, comédia e comida, a série fala sobre</p>
+                        <p class="card-text">Esta série com gênero de romance, comédia e comida, a série fala sobre alunos 
+                            de gastronomia e medicina, com uma história de amor e superação.</p>
                         data de lançamento: 26 de novembro</p>
                         ano:2023</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
@@ -158,29 +159,19 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Cooking Crush</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto é uma aplicação educativa interativa focada em ensinar conceitos básicos de
-                        astronomia. Utiliza uma série de scripts associados a diferentes atores (sprites) e
-                        cenários para criar uma experiência de aprendizado envolvente. O objetivo é familiarizar
-                        os usuários com tópicos como as fases da Lua, eclipses, a visibilidade de diferentes
-                        constelações dependendo da localização geográfica na Terra, e a forma da Terra, através
-                        de interações e visualizações dinâmicas.</p>
-                    <p>Cada ator no projeto possui scripts que definem seu comportamento em resposta a eventos
-                        específicos, como o início do programa (quando a bandeira é clicada), cliques do
-                        usuário, ou mensagens recebidas. Estes eventos desencadeiam ações como mudanças de
-                        cenário, movimentos de atores, exibição ou ocultação de atores, e a apresentação de
-                        diálogos informativos. Por exemplo, ao clicar em determinados atores, os usuários podem
-                        "receber" uma prova, o que leva a uma mudança de cenário e a exibição de informações
-                        relevantes ou a visualização de uma constelação específica.</p>
-                    <p>A importância das ferramentas utilizadas, como os blocos de código visual do Scratch,
-                        reside na sua acessibilidade e na capacidade de engajar aprendizes de diferentes idades
-                        no pensamento computacional e na exploração de conceitos científicos de forma
-                        interativa. O uso de cenários, movimentos, e diálogos dinâmicos ajuda a criar uma
-                        experiência de aprendizado mais rica e memorável, encorajando os usuários a explorar e
-                        interagir com o conteúdo de maneira ativa, em vez de passivamente.</p>
+                    <p>Prem, Dynamite e Samsi administram um restaurante não tão popular. Com pesadas perdas, 
+                        o trio descobre uma competição de culinária com uma grande recompensa que pode ajudar 
+                        seus negócios. No entanto, os preparativos dão errado e, justamente quando Prem decidiu 
+                        desistir, ele conhece Ten, um estudante de medicina sob um pesado fardo de estresse. 
+                        </p>
+                    <p>Ten aborda Prem para ensiná-lo a cozinhar, e Prem usa isso como uma oportunidade de 
+                        golpe para ganhar dinheiro. No entanto, conforme as aulas avançam, não é apenas a comida 
+                        que está quente, mas também seus rostos enquanto eles se apaixonam lentamente. Adaptado 
+                        do romance " Love Course! Suea Gown Rak Suea Cook Rap" de iJune4S...</p>
                     <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
                 <div class="modal-footer">
