--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <!-- Projeto 2 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="not me.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Not Me</h5>
                         <p class="card-text">Esta série com vários gêneros como ação, thriller, mistério e romance, 
@@ -64,7 +64,7 @@
             <!-- Projeto 3 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="cooking crush.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Cooking Crush</h5>
                         <p class="card-text">Esta série com gênero de romance, comédia e comida, a série fala sobre alunos 
@@ -109,10 +109,6 @@
                     <img src="img/projeto-1.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
-                <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
-                </div>
             </div>
         </div>
     </div>
@@ -143,12 +139,6 @@
                         e as violações dos direitos civis.</p>
                     <img src="img/projeto-2.png" class="img-fluid w-100"
                         alt="Imagem representativa do projeto de uma biblioteca online">
-                </div>
-                <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao
-                        vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do
-                        projeto</a>
                 </div>
             </div>
         </div>
