--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="T.O.L.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="theory-of-love.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Theory of Love</h5>
                         <p class="card-text">Esta é uma série de romance cheio de drama e complicações na vida
