--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- Projeto 1 -->
             <div class="col-md-4">
                 <div class="card">
-                    <img src="theory-of-love.jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
+                    <img src="theory .jpg" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Theory of Love</h5>
                         <p class="card-text">Esta é uma série de romance cheio de drama e complicações na vida
@@ -106,8 +106,6 @@
                           amor verdadeiro ou encontrará uma forma de conquistar o coração de seu melhor amigo?</p>
                     <p>Adaptado do romance homônimo de JittiRain, “Teoria do Amor” é um drama romântico tailandês de 2019 dirigido 
                         por X Nuttapong Mongkolsawas. </p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
             </div>
         </div>
@@ -137,8 +135,6 @@
                         essa nova versão dele. Com a prisão e a morte como uma ameaça constante às suas vidas, 
                         White se vê desencadeando uma revolta generalizada contra a ganância capitalista, a corrupção
                         e as violações dos direitos civis.</p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100"
-                        alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
             </div>
         </div>
@@ -162,7 +158,6 @@
                         golpe para ganhar dinheiro. No entanto, conforme as aulas avançam, não é apenas a comida 
                         que está quente, mas também seus rostos enquanto eles se apaixonam lentamente. Adaptado 
                         do romance " Love Course! Suea Gown Rak Suea Cook Rap" de iJune4S...</p>
-                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
                 </div>
             </div>
         </div>
