--- a/index.html
+++ b/index.html
@@ -53,10 +53,8 @@
                         <p class="card-text">Esta série com vários gêneros como ação, thriller, mistério e romance, 
                             a série aborda sobre assuntos como política, a luta pelos direitos, violência, igualdade 
                             social, justiça, comunidade LGBTQ+ <p>
-                           </p>
-                                <p>data de lançamento: 12 de dezembro</p>
-                            
-                                <p>ano:2021</p>
+                            data de lançamento: 12 de dezembro</p>
+                            ano:2021</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
                             o projeto</button>
                     </div>
