--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <img src="gun.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150"
             srcset="">
         <p class="lead">Eu sou Gun Atthaphan_</p>
-        <h1>Eu estudo artes visuais</h1>
+        <h1>Eu estudo artes cênicas</h1>
         <p>Sou ator</p>
         <p>Minhas habilidades</p>
         <div>
